--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>JS30</title>
   </head>
   <body>
-    <a href="drum-stick/index.html">Drum Stick</a>
+    <a href="01-drum-stick/index.html">#1 Drum Stick</a>
+    <a href="02-js-clock/">#2 JS Clock</a>
+    <a href="03-css-variables-and-js/index.html">
+      #3 CSS variables and javascript
+    </a>
+    <a href="04-array-cardio-day-1/index.html">#4 Array cardio day 1</a>
+    <a href="05-flex-panel-gallery/index.html">#5 Flex Panel Gallery</a>
   </body>
 </html>
