--- a/index.html
+++ b/index.html
@@ -4,15 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bitter"
+      rel="stylesheet"
+    />
     <title>JS30</title>
+    <style>
+      * {
+        font-family: "Bitter", serif;
+      }
+      body {
+        background: #eeeeee;
+      }
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+      a {
+        padding: 1em;
+        border-radius: 14px;
+        margin: 1px;
+        text-align: center;
+        background-color: aliceblue;
+        width: 30%;
+        display: block;
+        text-decoration: none;
+      }
+      a:visited {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <a href="01-drum-stick/index.html">#1 Drum Stick</a>
-    <a href="02-js-clock/">#2 JS Clock</a>
-    <a href="03-css-variables-and-js/index.html">
-      #3 CSS variables and javascript
-    </a>
-    <a href="04-array-cardio-day-1/index.html">#4 Array cardio day 1</a>
-    <a href="05-flex-panel-gallery/index.html">#5 Flex Panel Gallery</a>
+    <div class="container">
+      <h1>#Javscript30 Challenge</h1>
+      <a href="01-drum-stick/index.html">#1 Drum Stick</a>
+      <a href="02-js-clock/">#2 JS Clock</a>
+      <a href="03-css-variables-and-js/index.html">
+        #3 CSS Variables and Javascript
+      </a>
+      <a href="04-array-cardio-day-1/index.html">#4 Array Cardio Day 1</a>
+      <a href="05-flex-panel-gallery/index.html">#5 Flex Panel Gallery</a>
+      <a href="06-ajax-type-ahead/index.html">#6 Ajax Type Ahead</a>
+      <a href="07-array-cardio-day-2/">#7 Array Cardio Day 2</a>
+      <a href="08-fun-with-canvas/index.html">#8 Fun with Canvas</a>
+    </div>
   </body>
 </html>
