index page mobile css query

--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
         margin: 1px;
         text-align: center;
         background-color: aliceblue;
-        width: 30%;
+        width: 50%;
         display: block;
         text-decoration: none;
       }
       a:visited {
         color: blue;
+      }
+
+      @media (max-width: 720px) {
+        a {
+          width: 80%;
+        }
       }
     </style>
   </head>
