14, 15-localstorage event deligation styling little bit

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       <a href="06-ajax-type-ahead/index.html">#6 Ajax Type Ahead</a>
       <a href="07-array-cardio-day-2/">#7 Array Cardio Day 2</a>
       <a href="08-fun-with-canvas/index.html">#8 Fun with Canvas</a>
+      <a href="09-dev-tools-domination/">#9 Dev tools domination</a>
+      <a href="10-hold-shift-check/">#10 Hold Shift Check</a>
+      <a href="11-custom-html5-player/">#11 Custom HTML5 Player</a>
+      <a href="12-konami-code-detection/">#12 Konami Code/Seq Deletection</a>
+      <a href="13-slide-on-scroll/">#13 Slide images on scroll</a>
+      <a href="14-reference-vs-copy/">#14 Reference vs Copy</a>
+      <a href="15-localstorage-event-deligation/"
+        >#15 Localstorage Event Delegation (TODOs)</a
+      >
     </div>
   </body>
 </html>
