--- a/14-reference-vs-copy/index.html
+++ b/14-reference-vs-copy/index.html
@@ -5,6 +5,7 @@
     <title>JS Reference VS Copy</title>
   </head>
   <body>
+    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
     <script>
       // start with strings, numbers and booleans
       var age1 = 10;
