--- a/19-webcam-fun/index.html
+++ b/19-webcam-fun/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>Ghost Mirror</h1>
       <canvas id="canvas"></canvas>
       <video id="video" autoplay hidden></video>
       <div class="rgb">
