--- a/19-webcam-fun/index.html
+++ b/19-webcam-fun/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower"
+      rel="stylesheet"
+    />
+
     <title>Webcam Fun</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -12,23 +17,25 @@
       <h1>Ghost Mirror</h1>
       <canvas id="canvas"></canvas>
       <video id="video" autoplay hidden></video>
-      <div class="rgb">
-        <label for="rmin">Red Min:</label>
-        <input type="range" min="0" max="255" name="rmin" />
-        <label for="rmax">Red Max:</label>
-        <input type="range" min="0" max="255" name="rmax" />
-        <br />
-        <label for="gmin">Green Min:</label>
-        <input type="range" min="0" max="255" name="gmin" />
-        <label for="gmax">Green Max:</label>
-        <input type="range" min="0" max="255" name="gmax" />
-        <br />
-        <label for="bmin">Blue Min:</label>
-        <input type="range" min="0" max="255" name="bmin" />
-        <label for="bmax">Blue Max:</label>
-        <input type="range" min="0" max="255" name="bmax" />
+      <div class="controls">
+        <div class="rgb">
+          <label for="rmin">Red Min:</label>
+          <input type="range" min="0" max="255" name="rmin" />
+          <label for="rmax">Red Max:</label>
+          <input type="range" min="0" max="255" name="rmax" />
+          <br />
+          <label for="gmin">Green Min:</label>
+          <input type="range" min="0" max="255" name="gmin" />
+          <label for="gmax">Green Max:</label>
+          <input type="range" min="0" max="255" name="gmax" />
+          <br />
+          <label for="bmin">Blue Min:</label>
+          <input type="range" min="0" max="255" name="bmin" />
+          <label for="bmax">Blue Max:</label>
+          <input type="range" min="0" max="255" name="bmax" />
+        </div>
+        <button onClick="takePhoto()">Take Photo</button>
       </div>
-      <button onClick="takePhoto()">Take Photo</button>
     </div>
   </body>
   <script src="script.js"></script>
