native speech recognition xalda

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
       <a href="15-localstorage-event-deligation/"
         >#15 Localstorage Event Delegation (TODOs)</a
       >
+      <a href="16-css-shadow-move/">#16 Css Shadow Walk</a>
+      <a href="17-sort-without-articles/">#17 Sorting without (A|An|The)</a>
+      <a href="18-tally-string-with-reduce/">#18 Reduce and Tally </a>
+      <a href="19-webcam-fun/">#19 Fun With Webcam - Ghost Mirror</a>
+      <a href="20-native-speech-recognition/">#20 Native Speech Recognition</a>
     </div>
   </body>
 </html>
