voicify - text2speech using browser api

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       <a href="18-tally-string-with-reduce/">#18 Reduce and Tally </a>
       <a href="19-webcam-fun/">#19 Fun With Webcam - Ghost Mirror</a>
       <a href="20-native-speech-recognition/">#20 Native Speech Recognition</a>
+      <a href="21-geolocation-compass/">#21 Geolocation Based Compass</a>
+      <a href="22-follow-along-links/">#22 Follow along links</a>
+      <a href="23-speech-synthesis-text2speech/"
+        >#23 Speech Synthesis (Text2Speech API)</a
+      >
     </div>
   </body>
 </html>
