twitter card tags

--- a/23-speech-synthesis-text2speech/index.html
+++ b/23-speech-synthesis-text2speech/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Text2Speech 🤓</title>
+    <title>Text2Speech using speechSynthesis - @shahidcodes</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="twitter:card"
+      content="Voicify - Convert texts to speeches using browser `speechSynthesis`. #javascript30"
+    />
+    <meta name="twitter:creator" content="@shahidcodes" />
+    <meta
+      property="og:title"
+      content="Text2Speech using speechSynthesis - @shahidcodes"
+    />
   </head>
   <body>
     <div class="container">
