#26 stripe like follow nav

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <a href="23-speech-synthesis-text2speech/"
         >#23 Speech Synthesis (Text2Speech API)</a
       >
+      <a href="24-sticky-nav/">#24 Sticky Nav</a>
     </div>
   </body>
 </html>
