click drag and scroll

--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
         >#23 Speech Synthesis (Text2Speech API)</a
       >
       <a href="24-sticky-nav/">#24 Sticky Nav</a>
+      <a href="25-event-things-capture-bubble/"
+        >#25 Event Bubbling, Capture, Once</a
+      >
+      <a href="26-stripe-follow-nav/">#26 Stripe like follow navigation</a>
+      <a href="27-click-drag-scroll/"
+        >#27 Click and drag scroll (Horizontal Scrolling)</a
+      >
     </div>
   </body>
 </html>
