--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
       <a href="27-click-drag-scroll/"
         >#27 Click and drag scroll (Horizontal Scrolling)</a
       >
+      <a href="28-video-speed-controller/">#28 Video Speed Controller UI</a>
+      <a href="29-countdown-timer/index.html">#29 Countdown Timer</a>
     </div>
   </body>
 </html>
