flex-wrap for mobile countdown timer

--- a/29-countdown-timer/index.html
+++ b/29-countdown-timer/index.html
@@ -23,6 +23,7 @@
         width: 100%;
         background: #347fc4;
         justify-content: center;
+        flex-wrap: wrap;
         box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
       }
       .timer-control > * {
