--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       >
       <a href="28-video-speed-controller/">#28 Video Speed Controller UI</a>
       <a href="29-countdown-timer/index.html">#29 Countdown Timer</a>
+      <a href="30-whack-a-mole/">#30 Whack a mole</a>
     </div>
   </body>
 </html>
