fix: remove hard coded text

--- a/23-speech-synthesis-text2speech/index.html
+++ b/23-speech-synthesis-text2speech/index.html
@@ -74,7 +74,7 @@
     let voices = [];
     const voiceSelect = document.querySelector("[name='voices']");
     const text = document.querySelector("[name='text']");
-    text.value = "Javascript is love.";
+    // text.value = "Javascript is love.";
     msg.text = text.value;
     function populateVoices() {
       let voices = this.getVoices();
